[package]
name = "cake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
nanoid = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
platform-dirs = "0.3.0"

[profile.release]
strip = true # Automatically strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link time optimization
codegen-units = 1 # Maximize site reduction optimizations
